# cvrp_solver_comparison

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: analyse_results.ipynb  run_benchmark.py  validate_all.py
src/cvrp_solver_comparison/: main.py
src/cvrp_solver_comparison.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cvrp_solver_comparison/domain/: models.py  solver.py  utils.py
src/cvrp_solver_comparison/solver/: ortools.py  pyhygese.py  pyvrp.py  solver.py  timefold.py  vroom.py
src/cvrp_solver_comparison/solver/rustvrp/: config_types.py  pragmatic_types.py  rustvrp.py
src/cvrp_solver_comparison/solver/timefold_solver/: constraints.py  domain.py  json_serialization.py  timefold_solver.py
