[project]
name = "cvrp-solver-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.15.6755",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "pyvrp>=0.11.3",
    "pyvroom>=1.14.0",
    "vrplib>=1.5.1",
]
